# UWB

./: .gitignore  RTLSDisplayApplication.cpp  RTLSDisplayApplication.h  TREKdisplay.pro  error.txt  lanague_cn.qm  lanague_cn.ts  lanague_en.ts  logo.rc  main.cpp  object_script.HR-RTLS_PC  readme.txt  res_resources_qmlcache.qrc  数据库需求.md
influx/: README.md  anchors.example.json  anchors.json  docker-compose.yml  log.csv  pyproject.toml  run_trajectory_plot.sh
influx/.influxdb2/: influxd.bolt
influx/.influxdb2/engine/data/1afb1744d08fb7c8/autogen/2/: 000000001-000000001.tsm
influx/.influxdb2/engine/data/1f165f3e353d57f4/autogen/1/: 000000001-000000001.tsm  fields.idxl
influx/.influxdb2/engine/data/1f165f3e353d57f4/autogen/1/index/0/: L0-00000001.tsl  L1-00000001.tsi
influx/.influxdb2/engine/data/1f165f3e353d57f4/autogen/1/index/1/: L0-00000001.tsl
influx/.influxdb2/engine/data/1f165f3e353d57f4/autogen/1/index/3/: L0-00000001.tsl  L1-00000001.tsi
influx/.influxdb2/engine/data/1f165f3e353d57f4/autogen/1/index/7/: L1-00000001.tsi
influx/.influxdb2/engine/data/1f165f3e353d57f4/autogen/3/: fields.idx  fields.idxl
influx/.influxdb2/engine/data/1f165f3e353d57f4/autogen/3/index/0/: L0-00000001.tsl  L1-00000001.tsi
influx/.influxdb2/engine/data/1f165f3e353d57f4/autogen/3/index/3/: L0-00000001.tsl
influx/configs/: trajectory_plot.example.json
influx/src/uwb_pipeline/: __init__.py  cli.py  config.py  constants.py  line_protocol.py  model.py  parser.py  pipeline.py  sink.py  trajectory_plot.py
influx/tests/: test_line_protocol.py  test_parser.py
(+57 files in other folders)
