[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uwb-influx-pipeline"
version = "0.1.0"
description = "Parse UWB CSV logs and write them to InfluxDB using line protocol."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "influxdb-client>=1.43.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
uwb-pipeline = "uwb_pipeline.cli:main"
uwb-plot-trajectory = "uwb_pipeline.trajectory_plot:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
